fix application page's header z-index bug

--- a/app/pages/application/application.scss
+++ b/app/pages/application/application.scss
@@ -14,7 +14,7 @@ $applicationColor: white !default;
     opacity: 0;
     z-index: 100;
     font-size: 1.2em;
-    background-image: linear-gradient(0deg, transparent, transparent 50%, #999 50%);
+    background-image: linear-gradient(0deg, transparent, transparent 50%, #f5f5f5 50%);
     background-position: bottom;
     background-size: 100% 1px;
     background-repeat: no-repeat;
